# agentnap

./: CONTRIBUTING.md  LICENSE  PLAYBOOK.md  README.md  agentnap.py  install.sh  pyproject.toml  test_agentnap.py
.githooks/: pre-push
.github/workflows/: test.yml
evidence/: EVIDENCE.md  experiment_orphan_reap.py  experiment_run_2026-07-06.txt  safety_audit_deepseek_2026-07-06.md
launch/: LAUNCH_KIT.md  make_screenshot.py
launch/assets/: advise_sample.txt
launch/collateral/: AgentNap_GioiThieu_VN.docx  AgentNap_Overview_EN.docx  make_collateral.py
packaging/: agentnap.rb
